syntax = "proto3";

package recommendation;

service RecommendationService {
  rpc GetRecommendations(RecommendationRequest) returns (RecommendationResponse) {}
}

message RecommendationRequest {
  string user_id = 1;
  repeated string genres = 2;
}

message Film {
  string id = 1;
  string title = 2;
  string genre = 3;
  int32 release_year = 4;
  float rating = 5;
}

message RecommendationResponse {
  repeated Film films = 1;
}